fix(ci): record real context-switch counts; condense web-server benchmark report
ps -o nvcsw/nivcsw is not a procps keyword on Linux (it prints "-",
which awk summed to 0), so every web-server row recorded Csw 0. Read
voluntary/nonvoluntary_ctxt_switches from /proc instead, summed over
every task of every process in the server's process group, and delta
them over matching thread identities so mid-run thread churn is
skipped rather than zeroing the whole sample.

Also restructure the generated README section: the per-server bullet
list with essay-length annotations becomes one table plus four short
footnotes, and the full Spring JVM option dump moves out of the README
(it stays recorded in benchmarks/webserver.json).